remove CONTAINER_PROJECT_LOCATION env var and update readme doc

--- a/docker/.env-example
+++ b/docker/.env-example
@@ -1,3 +1,3 @@
 COMPOSE_PROJECT_NAME=yii2-docker
-FRONTEND_SERVER_NAME=front-yii2 front.yii2.loc
-BACKEND_SERVER_NAME=back-yii2 back.yii2.loc
+FRONTEND_SERVER_NAME=front.yii2.loc
+BACKEND_SERVER_NAME=back.yii2.loc
