--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     volumes:
-      - ./../:${CONTAINER_PROJECT_LOCATION}
+      - ./../:/var/www/app
     environment:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx/conf.d
       FRONTEND_SERVER_NAME: ${FRONTEND_SERVER_NAME}
@@ -36,7 +36,7 @@ services:
       context: ./php-fpm
       dockerfile: Dockerfile
     volumes:
-      - ./../:${CONTAINER_PROJECT_LOCATION}
+      - ./../:/var/www/app
     networks:
       - yii-network
 
