--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:alpine
 
 COPY ./hosts /etc/nginx/templates
 
-WORKDIR ${CONTAINER_PROJECT_LOCATION}
+WORKDIR /var/www/app
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
